# egghead-rust-cli

./: Cargo.toml  README.md
.garden/: atitle.md  atitle1.md
src/: main.rs  write.rs
tests/: fake_editor.sh  integrations.rs
