[package]
authors = ["Alex Low <me@alexlow.dev>"]
edition = "2018"
name = "rust-cli"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "garden"
path = "src/main.rs"

[dependencies]
color-eyre = "0.5.11"
structopt = "0.3.21"
