[package]
authors = ["Alex Low <me@alexlow.dev>"]
edition = "2018"
name = "rust-cli"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "garden"
path = "src/main.rs"

[lib]
name = "digital_garden"
path = "src/lib.rs"

[dependencies]
assert_fs = "1.0.2"
color-eyre = "0.5.11"
directories = "3.0.2"
edit = "0.1.3"
predicates = "1.0.8"
rprompt = "1.0.5"
slug = "0.1.4"
structopt = "0.3.21"

[dev-dependencies]
assert_cmd = "1.0.3"
